# readmap

./: README.md  meson.build
api/: fdmgr.c  init.c  meson.build  openclose.c
include/: readmapapi.h
preload/: close.c  meson.build  open.c  read.c  write.c
tests/: meson.build  readmap_test.h  test_base.c  testreadmap.c
